aks-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloapp
  template:
    metadata:
      labels:
        app: helloapp
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: helloapp
          image: testcontainers/helloworld:latest
          volumeMounts:
            - name: secrets-store01-inline
              mountPath: /mnt/secrets-store
              readOnly: true
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "1"
              memory: 250Mi
            limits:
              cpu: "256"
              memory: 11400G
      imagePullSecrets:
        - name: akscredauth
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: azure-kvname-system-msi
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      name: port80
      port: 80
      protocol: TCP
  selector:
    app: helloapp
